[package]
name    = "sensor-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde      = { version = "*", features = ["derive"] }
byteorder  = { version = "1.5.0" }
num-traits = { version = "0.2.17" }
image      = { version = "0.24.7" }
nalgebra   = { version = "0.32.3", features = ["serde-serialize"] }
ndarray    = { version = "0.15.6", features = ["serde"] }

